Disable HTTP/2 requests to work around a networking bug (fixes #2572)

Qt5 has HTTP/2 disabled by default, Qt6 has HTTP/2 enabled by default.

Users have reported that WMS server of Danish SDFI is not working anymore
and it turns out it is due to a bug in Qt - QTBUG-111417 - so let's
avoid HTTP/2 for the time being.